--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,12 @@
 spring.application.name=giftngo
 
-feature.validation.enabled=true
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.jpa.hibernate.ddl-auto=create-drop
+
+feature.validation-enabled=true
+
+validation.blocked-countries=China,Spain,United States
+validation.blocked-isps=AWS,GCP,Azure
