--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>giftngo</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>giftngo</name>
-    <description>Demo project for Spring Boot</description>
+    <description>Project assessment</description>
     <url/>
     <licenses>
         <license/>
@@ -69,7 +69,6 @@
             <version>3.10.0</version>
             <scope>test</scope>
         </dependency>
-				
     </dependencies>
 
     <build>
